syntax = "proto3";

package job.v1;

option go_package = "github.com/maxischmaxi/ljtime-api/job/v1;jobv1";

import "customer/v1/customer.proto";
import "project/v1/project.proto";

service JobService {
  rpc GetJob (GetJobRequest) returns (GetJobResponse);
  rpc GetJobs (GetJobsRequest) returns (GetJobsResponse);
  rpc CreateJob (CreateJobRequest) returns (CreateJobResponse);
  rpc UpdateJob (UpdateJobRequest) returns (UpdateJobResponse);
  rpc DeleteJob (DeleteJobRequest) returns (DeleteJobResponse);
  rpc GetJobsByProject (GetJobsByProjectRequest) returns (GetJobsByProjectResponse);
  rpc GetJobsByCustomer (GetJobsByCustomerRequest) returns (GetJobsByCustomerResponse);
  rpc GetJobsByDate (GetJobsByDateRequest) returns (GetJobsByDateResponse);
}

enum JobType {
  JOB_TYPE_UNSPECIFIED = 0;
  JOB_TYPE_BILLABLE = 1;
  JOB_TYPE_NON_BILLABLE = 2;
}

message Job {
  string id = 1;
  string project_id = 2;
  string description = 3;
  JobType type = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
  int64 hours = 7;
  int64 minutes = 8;
  string date = 9;
}

message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message CreateJob {
  string project_id = 1;
  string description = 3;
  JobType type = 4;
  int64 hours = 5;
  int64 minutes = 6;
  string date = 7;
}

message CreateJobRequest {
  CreateJob job = 1;
}

message CreateJobResponse {
  Job job = 1;
}

message UpdateJobRequest {
  Job job = 1;
}

message UpdateJobResponse {
  Job job = 1;
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {
  string id = 1;
}

message GetJobsRequest { }

message GetJobsResponse {
  repeated Job jobs = 1;
}

message GetJobsByProjectRequest {
  string project_id = 1;
}

message GetJobsByProjectResponse {
  repeated Job jobs = 1;
}

message GetJobsByCustomerRequest {
  string customer_id = 1;
}

message GetJobsByCustomerResponse {
  repeated Job jobs = 1;
}

message GetJobsByDateRequest {
  string date = 1;
}

message JobsByDateResponse {
  Job job = 1;
  customer.v1.Customer customer = 2;
  project.v1.Project project = 3;
}

message GetJobsByDateResponse {
  repeated JobsByDateResponse jobs = 1;
}
